unpackaged/main/default/objects/Case/fields/ONBOARDING10__c.field-meta.xml
<CustomField>
    <fullName>ONBOARDING10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ONBOARDING10</label>
    <type>Checkbox</type>
</CustomField>