unpackaged/main/default/objects/Case/fields/Onboarding_1__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding 1</label>
    <type>Checkbox</type>
</CustomField>