unpackaged/main/default/objects/Case/fields/Onboarding_2__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding 2</label>
    <type>Checkbox</type>
</CustomField>