unpackaged/main/default/objects/Case/fields/ORDER__c.field-meta.xml
<CustomField>
    <fullName>ORDER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ORDER</label>
    <type>Checkbox</type>
</CustomField>